<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/recipe_img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/rounded_bg"
            android:scaleType="centerCrop"
            android:src="@drawable/recipe_main"
            android:contentDescription="@string/recipe_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipe_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_bg"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_img">

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/title"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

            <TextView
                android:id="@+id/recipe_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="changed category"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/category_name"
                app:layout_constraintStart_toEndOf="@id/category_name" />

            <TextView
                android:id="@+id/desc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_name" />

            <TextView
                android:id="@+id/recipe_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik"
                android:text="changed description"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/cook_dates_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:paddingBottom="5dp"
                android:text="@string/cook_dates"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:background="@drawable/rounded_bg"
                android:padding="0dp"
                android:text="@string/plus"
                android:layout_marginBottom="8dp"
                android:onClick="openDateEditForm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cook_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:divider="@color/orange_dark"
            android:padding="10dp" />

        <TextView
            android:id="@+id/empty"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:divider="@color/orange_dark"
            android:text="@string/list_is_empty"
            android:padding="20dp" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>